--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ button:disabled {
       <option>Praveen Agarwal</option>
       <option>Raj Tripatrhi</option>
       <option>Rohit Chahuhan</option>
-      <option>Saurabh Pandey</option>
+      <option>Ajay Devrani</option>
     </select>
     <div class="filters">
       <div>
